add inventory
